@@ -113,13 +113,13 @@ function toggleTransElements() {
             </p>
             <p>
                 <label class="tipOwner" for="conf[site][defaultModule]">{translate(#Default module#)}
-                <span class="tipText">{translate(#This is the module that will be loaded if none are specified, ie, when you call index.php (FC only)#)}</span>
+                <span class="tipText">{translate(#This is the module that will be loaded if none are specified, ie, when you call index.php#)}</span>
                 </label>
                 <input type="text" name="conf[site][defaultModule]" id="conf[site][defaultModule]" value="{conf[site][defaultModule]}" />
             </p>
             <p>
                 <label class="tipOwner" for="conf[site][defaultManager]">{translate(#Default manager#)}
-                <span class="tipText">{translate(#This is the manager class that will be loaded if none are specified (FC only)#)}</span>
+                <span class="tipText">{translate(#This is the manager class that will be loaded if none are specified#)}</span>
                 </label>
                 <input type="text" name="conf[site][defaultManager]" id="conf[site][defaultManager]" value="{conf[site][defaultManager]}" />
             </p>
